k8s/manifests-8bb1dd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-8bb1dd
  namespace: journee
  labels:
    app: journee-8bb1dd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-8bb1dd
  template:
    metadata:
      labels:
        app: journee-8bb1dd
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-8bb1dd
          image: gcr.io/my-docker-471807/journee:v4.0.1
          ports:
            - containerPort: 3000
